# fluxo-rs

./: Cargo.toml  README.md  example.config.toml
.gitea/workflows/: ci.yml  release.yml
src/: bt_menu.rs  client.rs  config.rs  daemon.rs  error.rs  health.rs  help.rs  ipc.rs  macros.rs  main.rs  output.rs  registry.rs  signaler.rs  state.rs  test_pbpctrl.rs  utils.rs
src/modules/: audio.rs  backlight.rs  bt.rs  btrfs.rs  buds.rs  cpu.rs  disk.rs  dnd.rs  game.rs  gpu.rs  hardware.rs  keyboard.rs  memory.rs  mod.rs  mpris.rs  network.rs  power.rs  sys.rs
src/modules/bt/: buds.rs  maestro.rs  mod.rs
