[package]
name = "fluxo-rs"
version = "0.3.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3"
regex = "1.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
thiserror = "2.0"
toml = "1.1.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
maestro = { git = "https://github.com/qzed/pbpctrl", package = "maestro" }
bluer = { version = "0.17", features = ["bluetoothd", "rfcomm", "id"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "signal", "process"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
futures = "0.3"
libpulse-binding = "2.30"
nix = { version = "0.31", features = ["net"] }

[dev-dependencies]

tempfile = "3"
